noinst_LTLIBRARIES = libproof.la

INCLUDES=$(config_includedirs) 

libproof_la_SOURCES = ProofGlobal.h \
		      ProofGraphTransformationAlgorithms.C ProofGraphRules.C ProofGraphBuild.C ProofGraph.h \
		      ProofGraphHelp.C ProofGraphCheck.C ProofGraphMain.C \
		      ProofInterpolator.C ProofGraphHeuristics.C
