noinst_LTLIBRARIES = libmc.la

INCLUDES=$(config_includedirs)

libmc_la_SOURCES = MC.C MC.h \
		   Transition.h Transition.C \
		   Node.h Node.C \
		   Container.h Container.C \
		   Clusterizer.h Clusterizer.C \
		   Formula.h Formula.C \
		   Invariant.h Invariant.C \
		   InvariantContainer.h InvariantContainer.C \
                   MC_Abstraction.C MC_Declarations.C MC_Stuff.C
