noinst_LTLIBRARIES = libsimplifiers.la

INCLUDES=$(config_includedirs)

libsimplifiers_la_SOURCES = TopLevelProp.h TopLevelProp.C \
			    ExpandITEs.h ExpandITEs.C \
			    BVBooleanize.h BVBooleanize.C \
			    DLRescale.h DLRescale.C \
			    BVNormalize.h BVNormalize.C \
			    Ackermanize.h Ackermanize.C \
			    Purify.C Purify.h \
			    AXDiffPreproc.C AXDiffPreproc.h \
			    TopLevelPropInc.h TopLevelPropInc.C \
			    AckermanizeInc.h AckermanizeInc.C

